--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
  
 <body>
-<table bgcolor="blue">
+<table bgcolor="violet">
         <tr>
             <td>
                 <table align="center">
